--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    
+    <script src="https://js.paystack.co/v2/inline.js"></script>
     <!-- PWA Service Worker Registration -->
     <script>
       if ('serviceWorker' in navigator) {
