change name of app

--- a/client/public/landing.html
+++ b/client/public/landing.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Studyxo Uni Guide</title>
+    <title>Welcome to GH-UniCheck</title>
     <link rel="icon" href="/favicon.ico" />
     <style>
       body {
@@ -70,10 +70,10 @@
   <body>
     <div class="container">
       <img src="logo.png" alt="App Logo" class="logo" />
-      <h1>Studyxo Uni Guide</h1>
+      <h1>GH-UniCheck</h1>
       <p>Your complete guide to universities in Ghana. Find, compare, and check your eligibility for programs with ease.</p>
       <a href="/" class="enter-btn">Enter App</a>
     </div>
-    <div class="footer">&copy; 2025 Studyxo Uni Guide. Empowering students across Ghana.</div>
+    <div class="footer">&copy; 2025 GH-UniCheck. Empowering students across Ghana.</div>
   </body>
 </html>
