--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#3b82f6" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="GH Uni Guide" />
+    <meta name="apple-mobile-web-app-title" content="GH-UniCheck" />
     <meta name="msapplication-TileColor" content="#3b82f6" />
     
     <!-- PWA Manifest -->
